Fixed single-post and text overflow

--- a/css/pages/feed.css
+++ b/css/pages/feed.css
@@ -1,5 +1,5 @@
 .container {
-    width: min(720px, 100%);
+    max-width: 720px;;
     padding-inline: 12px;
     margin: 0 auto;
 }
@@ -9,10 +9,6 @@
     color: #6b7280;
     margin: 8px 0;
 }
-
-
-
-.create-post, .post { width: 100%;}
 
 /*logout btn*/
 header {
@@ -30,40 +26,66 @@ header {
 
 .create-post .btn { padding: 10px; }
 .create-post .btn:hover { background-color: #eeeeee; color: #16243a;}
-
 .create-post .input { width: 100%; }
 
 @media (min-width: 560px) {
     .create-post .input { grid-column: 1/2; }
 }
 
-/* FEED !! */
-.feed-list { display: grid; gap: 12px;}
-.post {  background-color: #fff; padding: 12px; max-width: 8000px;} 
+/* FEED */
 
-.post-header { display: flex; align-items: center; justify-content: space-between; margin-bottom: 8px;}
-.post-user {display: flex; align-items: center; gap: 10px;} 
+.post {  
+    background-color: #fff;
+    padding: 12px;
+}
+
+.post-header {
+    display: flex; align-items: center; justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.post-user { 
+    display: flex; align-items: center; gap: 10px;
+}
+
 .post-avatar { 
-    width: 36px; height: 36px; border-radius: 50%; 
-    object-fit: cover; background: #16243a center/cover no-repeat; 
+    width: 36px; height: 36px; border-radius: 50%;
+    object-fit: cover; background: #16243a center/cover no-repeat;
     border: 1px solid #a7a7a7;
 }
 
-.post-time { font-size: 0.75rem; color: #6b7280;}
+.post-time { font-size: 0.75rem; color: #6b7280; }
 
-.post-title { margin: 4px 5px; font-size: 1.2rem; font-weight: 700; }
+.post-title {
+    margin: 4px 5px;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
 
-.post-media { margin: 8px 0 6px; border-radius: 8px; overflow: hidden; }
-.post-media img { width: 100%; height: 100%; object-fit: cover; display: block;}
+.post-media { 
+    margin: 8px 0 6px; 
+    border-radius: 8px; 
+    overflow: hidden; 
+}
 
-.post-media .ratio { width: 100%; position: relative;}
-.post-media .ratio.r-16x9 { aspect-ratio: 16/9;}
-.post-media .ratio.r-1x1 { aspect-ratio: 1/1;}
-.post-media .ratio.r-4x5 { aspect-ratio: 4/5;}
+.post-media img { 
+    width: 100%; height: 100%; object-fit: cover; display: block;
+}
 
-.post-body { margin: 6px 6px 2px;}
-.post-actions { display: flex; align-items: center; gap: 8px; margin-top: 6px; color: #6b7280;}
+.post-media .ratio { width: 100%; position: relative; }
+.post-media .ratio.r-16x9 { aspect-ratio: 16/9; }
+.post-media .ratio.r-1x1 { aspect-ratio: 1/1; }
+.post-media .ratio.r-4x5 { aspect-ratio: 4/5; }
 
+.post-body {
+    margin: 6px 6px 2px;
+    overflow-wrap: break-word; 
+}
+
+.post-actions {
+    display: flex; align-items: center; gap: 8px;
+    margin-top: 6px; color: #6b7280;
+}
 /* owner tools */
 
 .owner-tools { display: flex; gap: 4px; align-items: center; }
